--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
-body {
+body, h1, h2, h3, p {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "ComicSans" ;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+font-family: "ComicSans";  
+src: url("./fonts/Comic\ Sans\ MS.ttf") format("truetype"); 
+font-style: normal; 
+font-weight: normal;
 }
